feat: add short push
[skip ci]
