# push/types/types.go
@@ -6,6 +6,10 @@ import (
 	"notify-api/serve/types"
 )
 
+type PushChannel struct {
+	Name string // `enums:"TelegramHost, WebSocketHost, FCM, WebPush`
+}
+
 type Sender interface {
 	Send(msg *Message) error
 	Init() error
